Ajout de JavaDoc + suppression de classes inutilisées + revue de code